<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EknmLogistics</string>
    <string name="toast_coming_soon">Coming soon</string>

    <!-- Login/Registration flow -->
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="name_too_short">Name too short</string>
    <string name="invalid_password">Invalid password</string>
    <string name="registration">Registration</string>

    <!-- Navigation drawer -->
    <string name="log_out">Log out</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="user_greeting">Hi, %1s!</string>

    <!-- Home page -->
    <string name="home">Home</string>
    <string name="create_order">Create order</string>

    <!-- Order creation -->
    <string name="select_start_destination">Select start destination</string>
    <string name="select_end_destination">Select end destination</string>

    <!-- Order overview -->
    <string name="order_overview">Order overview</string>
    <string name="your_order">Your order: </string>
    <string name="origin">Origin: </string>
    <string name="destination">Destination: </string>
</resources>
