<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.eknm.eknmlogistics.root.RootViewModel"
            />
    </data>

    <com.google.android.material.navigation.NavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F1F1F1"
        android:fitsSystemWindows="false"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/profile_placeholder"
                app:avatarUrl="@{`https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg`}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.32"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@{@string/user_greeting(viewModel.userName)}"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar"
                tools:text="Hi, user name!"
                />

            <View
                android:id="@+id/headerDivider"
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                />

            <LinearLayout
                android:id="@+id/homeBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.showHome()}"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerDivider"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:text="@string/home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paymentMethodsBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.showPayments()}"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeBlock"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:text="@string/payment_methods"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logOutBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:text="@string/log_out"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</layout>
